     support implemented for USB connected drivers. Library API version
     bumped to 2.3.0 accordingly.
   * Added generation of FreeBSD/pfSense quirks for USB devices supported
     by NUT (may get installed to `$datadir` e.g. `/usr/local/share/nut`
     and need to be pasted into your `/boot/loader.conf.local`). [#2159]

 - upsd: Fixed conditions for "no listening interface available" diagnosis
   to check how many listeners we succeeded with, not whether the first one
   succeeded or not. If not all requested (non-localhost) listeners were
   available, default to fail the daemon start-up attempt; support for an
   `ALLOW_NOT_ALL_LISTENERS` setting was added to control this behavior. [#723]

 - NUT CI improvements:
   * Added publishing recipes for PyNUT client bindings for NUT, so it ends
     up in the link:https://pypi.org/project/PyNUTClient[PyPI repository].
     [#2158]

 - powerpanel text driver now handles status responses in any format and should
   support most devices [#2156]

 - usbhid-ups driver:
   * `arduino-hid` subdriver was enhanced from "initial bare bones" experimental
     set of mapped data points to support some 20 more mappings to make it more
     useful as an UPS driver, not just a controller developer sandbox. [#2188]
   * The `onlinedischarge` configuration flag name was too ambiguous and got
     deprecated (will be supported but no longer promoted by documentation),
     introducing `onlinedischarge_onbattery` as the meaningful alias. [#2213]
   * Logged notifications about `OL+DISCHRG` state should now be throttled
     (see the driver manual page for more details) [#2214, #2215]:
     - If `battery.charge` is available, make the message when entering the
       state and then only if the charge differs from that when we posted
       the earlier message (e.g. really discharging) and is under
       `onlinedischarge_log_throttle_hovercharge` value (defaults to 100%);