@@ -905,6 +905,8 @@
 "Numeric"	"ups"	"2"	"3000 SW"	""	"blazer_ser"
 "Numeric"	"ups"	"2"	"Digital 800 plus"	"USB"	"nutdrv_qx or blazer_usb"
 
+"NUT"	"ups"	"5"	"all supported NUT devices, through remote upsd"	""	"dummy-ups"
+
 "Oneac"	"ups"	"1"	"ON400"	"advanced interface"	"oneac"
 "Oneac"	"ups"	"1"	"ON600"	"advanced interface"	"oneac"
 "Oneac"	"ups"	"1"	"ON900"	"advanced interface"	"oneac"
